--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
 
     <title>Naturally Wine | Get new natural wine recommendations each month!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 
@@ -12,8 +13,12 @@
     <article class="container">
         <!-- Callout -->
         <section class="callout">
-            <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start receiving the world's best whiskeys every month. First one is free!</p>
+            <h1>The finest natural wines delivered to your doorstep.</h1>
+            <p class="lead">Sign up today to start receiving the world's best natural wines every month.
+                <strong><mark>First bottle is <s>$19.99</s> free!</mark></strong></p>
+            <button class="btn btn-success">Sign Up!</button>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
+                    responsibly.</small></p>
         </section>
         <!-- /.callout -->
         <hr>
@@ -21,41 +26,90 @@
         <!-- Quotes -->
         <section class="quotes">
             <h2 class="text-uppercase">Quotes:</h2>
-            <div class="quote">
+            <blockquote class="blockquote">
                 <p>I've been introduced to more than 10 great international natural wines I never knew about.</p>
                 <p>- Jane Doe</p>
-            </div>
-            <div class="quote">
+            </blockquote>
+            <blockquote class="blockquote">
                 <p>I've developed my palate to new heights!</p>
                 <p>- Jane Doe</p>
-            </div>
+            </blockquote>
         </section>
         <!-- /.quotes -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2>Features:</h2>
+            <h2 class="text-uppercase">Features:</h2>
             <div class="feature">
                 <h3>Feature 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
             <div class="feature">
                 <h3>Feature 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
             <div class="feature">
                 <h3>Feature 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
         </section>
         <!-- /.features -->
+        <hr>
+
+        <!-- Monthly Favourites -->
+        <section class="monthly_favourites">
+            <h2 class="text-uppercase">Monthly Favourites:</h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Rating</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Origin</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">5</th>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </section>
+        <!-- /.Monthly Favourites -->
+        <hr>
+
     </article>
 </body>
 
