Add styling to navigation

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
     <div class="container-fluid callout_container">
         <!-- Callout -->
+        <div class="opaque-overlay">&nbsp;</div>
         <div class="row">
             <div class="col-12">
                 <section class="callout jumbotron">
@@ -74,7 +75,7 @@
                         <s class="d-none d-sm-inline">€19.99</s>
                         <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>First one is free!</mark></strong></p>
-                    <p><button class="btn btn-lg btn-success" data-toggle="modal" data-target="#signUpModal">Sign
+                    <p><button class="btn btn-lg btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Sign
                             Up!</button></p>
                     <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink
                             responsibly.</small></p>
@@ -89,7 +90,7 @@
         <section class="quotes">
             <div class="row">
                 <div class="col-12 my-4">
-                    <h2 class="text-uppercase">Quotes:</h2>
+                    <!-- <h2 class="text-uppercase">Quotes:</h2> -->
                 </div>
             </div>
             <div class="row">
