--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="signup_container">
             <div class="d-none d-md-block">
                 <p class="navbar-text my-auto mr-2"><i>Great natural wines delivered to your door</i></p>
-                <a href="/login">Sign In / Sign Up</a>
+                <a class="btn btn--cta btn--red" href="/login">Sign In / Sign Up</a>
             </div>
         </div>
         <!--</div>-->
