--- a/index.html
+++ b/index.html
@@ -14,53 +14,56 @@
 
 <body>
     <!--Nav-->
-    <nav class="navbar navbar-light navbar-expand-sm">
-        <a href="/" class="navbar-brand">
-            Naturally Wine</a>
-
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span></button>
-
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Natural Wines
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Orange Wine</a>
-                        <a class="dropdown-item" href="#">Glou-Glou</a>
-                        <a class="dropdown-item" href="#">Pét-Nat</a>
-                        <a class="dropdown-item" href="#">Piquette</a>
-                        <a class="dropdown-item" href="#">Amphora Wine</a>
+    <div class="container-fluid navalert-container">
+        <div class="container-fluid alert-container">
+            <div class="row d-none d-sm-block">
+                <div class="col-12">
+                    <div class="site-wide-alert alert alert-warning">
+                        <strong>Sale Now On!</strong> We've got a sale on. Get a 12 month
+                        subscription for
+                        the
+                        price of 6!
+                        <a href="">See here for more details</a>
                     </div>
-                </li>
-                <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
-            </ul>
-        </div>
-        <div class="signup_container">
-            <div class="d-none d-md-block">
-                <p class="navbar-text my-auto mr-2"><i>Great natural wines delivered to your door</i></p>
-                <a class="btn btn--cta btn--red" href="/login">Sign In / Sign Up</a>
-            </div>
-        </div>
-        <!--</div>-->
-    </nav>
-
-    <div class="alert_container">
-        <div class="row">
-            <div class="col-12">
-                <div class="alert alert-warning">
-                    <strong class="sale">Sale Now On!</strong> We've got a sale on. Get a 12 month subscription for the
-                    price of 6!
-                    <a href="">See here for more details</a>
                 </div>
             </div>
         </div>
+        <nav class="navbar navbar-light navbar-expand-sm">
+            <a href="/" class="navbar-brand">
+                Naturally Wine</a>
+
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span></button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Natural Wines
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Orange Wine</a>
+                            <a class="dropdown-item" href="#">Glou-Glou</a>
+                            <a class="dropdown-item" href="#">Pét-Nat</a>
+                            <a class="dropdown-item" href="#">Piquette</a>
+                            <a class="dropdown-item" href="#">Amphora Wine</a>
+                        </div>
+                    </li>
+                    <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="">Sign In / Sign Up</a></li>
+                </ul>
+            </div>
+            <div class="signup_container">
+                <div class="d-none d-md-block">
+                    <p class="navbar-text my-auto mr-2"><i>Great natural wines delivered to your door</i></p>
+                    <a class="btn btn--cta btn--red" href="/login">Sign In / Sign Up</a>
+                </div>
+            </div>
+            <!--</div>-->
+        </nav>
     </div>
 
 
@@ -86,105 +89,117 @@
     </div>
 
     <!-- Quotes -->
-    <div class="container quotes_container">
-        <section class="quotes">
-            <div class="row">
-                <div class="col-12 my-4">
-                    <!-- <h2 class="text-uppercase">Quotes:</h2> -->
+    <div class="container-wrapper">
+        <div class="container quotes_container content-container">
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <!-- <h2 class="text-uppercase">Quotes:</h2> -->
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-sm-block">
-                            <img src="/assets/images/quote-img-1.jpeg" class="rounded-circle mr-3" height="100"
-                                width="100">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-sm-block">
+                                <img src="/assets/images/quote-img-1.jpeg" class="rounded-circle mr-3" height="100"
+                                    width="100">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p class="quote_text">I've been introduced to more than 10 great international
+                                        natural
+                                        wines I never knew
+                                        about!
+                                    </p>
+                                    <p class="quote_name">- Sarah Chan</p>
+                                </blockquote>
+                            </div>
                         </div>
-                        <div class="media-body">
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-sm-block">
+                                <img src="/assets/images/quote-img-2.jpeg" class="rounded-circle mr-3" height="100"
+                                    width="100">
+                            </div>
                             <blockquote class="blockquote">
-                                <p class="quote_text">I've been introduced to more than 10 great international natural
-                                    wines I never knew
-                                    about!
-                                </p>
-                                <p class="quote_name">- Sarah Chan</p>
+                                <p class="quote_text">I've developed my palate to new heights!</p>
+                                <p class="quote_name">- Elias Wearing</p>
                             </blockquote>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-sm-block">
-                            <img src="/assets/images/quote-img-2.jpeg" class="rounded-circle mr-3" height="100"
-                                width="100">
-                        </div>
-                        <blockquote class="blockquote">
-                            <p class="quote_text">I've developed my palate to new heights!</p>
-                            <p class="quote_name">- Elias Wearing</p>
-                        </blockquote>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </div>
     <!-- /.quotes -->
-    <hr>
+
+    <!-- <hr> -->
 
     <!-- Features -->
-    <div class="container features_container">
-        <section class="features">
-            <div class="row">
-                <div class="col-12 my-4">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span
-                                class="badge badge-success">NEW!</span></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+    <div class="container-wrapper container-wrapper--red">
+        <div class="container features_container content-container">
+            <section class=" features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Features:</h2>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span
+                                    class="badge badge-success">NEW!</span></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-times-circle d-none d-sm-inline"></i></i> Feature 3</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-times-circle d-none d-sm-inline"></i></i> Feature 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi
-                            ut
-                            aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- /.features -->
+            </section>
+            <!-- /.features -->
+        </div>
     </div>
 
     <!-- Monthly Favourites -->
-    <div class="container monthly_favourites_container">
-        <section class="monthly_favourites">
+    <div class="container monthly_favourites_container content-container">
+        <section class=" monthly_favourites">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 page-header">
                     <h2 class="text-uppercase">Monthly Favourites:</h2>
                 </div>
             </div>
