--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/1ba6b685d2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -39,7 +40,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto">
                     <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item mr-2"><a class="nav-link" href="">About</a></li>
+                    <li class="nav-item mr-2"><a class="nav-link" href="/about.html">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -111,7 +112,7 @@
                                         wines I never knew
                                         about!
                                     </p>
-                                    <p class="quote_name">- Sarah Chan</p>
+                                    <footer class="blockquote-footer">Sarah Chan</footer>
                                 </blockquote>
                             </div>
                         </div>
@@ -123,8 +124,9 @@
                                     width="100">
                             </div>
                             <blockquote class="blockquote">
-                                <p class="quote_text">I've developed my palate to new heights!</p>
-                                <p class="quote_name">- Elias Wearing</p>
+                                <p class="quote_text">I've developed my palate to new heights and my friends are always
+                                    impressed by the wines I bring to our gatherings!</p>
+                                <footer class="blockquote-footer">Elias Wearing</footer>
                             </blockquote>
                         </div>
                     </div>
@@ -146,34 +148,20 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-6">
                         <div class="feature">
                             <h3><i class="fas fa-gift d-none d-sm-block"></i> Wine of the Week <span
-                                    class="badge badge-success">NEW!</span></h3>
+                                    class="badge badge-success"> NEW!</span></h3>
                             <p>An intriguing new addition to our collection, this floral wine with subtle peppery notes
                                 is from
                                 Oregon and a great choice to wow guests at your next dinner party! </p>
-                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                            <p><a class="btn btn-sm btn-light" href="/featured-wine.html">Read More</a></p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-6">
                         <div class="feature">
                             <h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
                             <p></p>
-                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                        </div>
-                    </div>
-                    <div class="col-12 d-md-none d-lg-block col-lg-4">
-                        <div class="feature">
-                            <h3><i class="fas fa-times-circle d-none d-sm-block"></i></i> Feature 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut
-                                labore
-                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                laboris
-                                nisi
-                                ut
-                                aliquip ex ea commodo consequat.</p>
                             <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                         </div>
                     </div>
